# ResearchAgent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TESTING.md  chat_demo.py  cleanup_tests.py  demo_react_python_sandbox.py  main.py  pyproject.toml  researchagent.py  run_tests.py  test.py
.serena/: project.yml
.serena/memories/: glm-4.5-air-configuration.md
backup_tests_20241016_163000/: demo_react_python_sandbox.py  test_python_tool_standalone.py  test_react_python_sandbox.py  test_sandbox_fusion_direct.py
cli/: __init__.py  cli.py  utils.py
cli/commands/: __init__.py  base.py  example.py  interactive.py  research.py  search.py  test.py
examples/: __init__.py  basic_usage.py  react_agent_demo.py  tools_demo.py
inference/: __init__.py  chat_agent.py  config.py  google_scholar_tool.py  google_search_tool.py  jina_url_visit_tool.py  python_sandbox_tool.py  react_agent.py  research_tool.py
tests/: REFACTORING_SUMMARY.md  __init__.py  run_tests_with_config.py  test_chat_agent.py  test_config.py  test_google_scholar_tool.py  test_google_search.py  test_jina_url_visit.py  test_python_sandbox.py  test_react_agent.py  test_research_tool.py
